Update project files
Former-commit-id: 70467e8f55ba535bee52eb4cfd51ab518f15a474

--- a/variants/PORTENTA_H33/e2studio_project/.project
+++ b/variants/PORTENTA_H33/e2studio_project/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>PORTENTA_H33</name>
+	<name>PORTENTA_H33_NEW</name>
 	<comment></comment>
 	<projects>
 	</projects>
