Allocate missing SCI interfaces
Former-commit-id: 32506431df1a39f4b3cf9f9a31879af24d8665c8

--- a/variants/PORTENTA_H33/e2studio_project/.settings/com.renesas.cdt.ddsc.packs.componentfiles.prefs
+++ b/variants/PORTENTA_H33/e2studio_project/.settings/com.renesas.cdt.ddsc.packs.componentfiles.prefs
@@ -110,6 +110,8 @@ Renesas\#\#HAL\ Drivers\#\#all\#\#r_sci_b_spi\#\#\#\#3.7.0/all=2516469150,ra/fsp
 Renesas\#\#HAL\ Drivers\#\#all\#\#r_sci_b_spi\#\#\#\#3.7.0/libraries=
 Renesas\#\#HAL\ Drivers\#\#all\#\#r_sci_b_uart\#\#\#\#3.7.0/all=751402826,ra/fsp/src/r_sci_b_uart/r_sci_b_uart.c|1528567064,ra/fsp/inc/instances/r_sci_b_uart.h|2170971077,ra/fsp/inc/api/r_transfer_api.h|134969800,ra/fsp/inc/api/r_uart_api.h
 Renesas\#\#HAL\ Drivers\#\#all\#\#r_sci_b_uart\#\#\#\#3.7.0/libraries=
+Renesas\#\#HAL\ Drivers\#\#all\#\#r_sci_i2c\#\#\#\#3.7.0/all=744381531,ra/fsp/src/r_sci_i2c/r_sci_i2c.c|2170971077,ra/fsp/inc/api/r_transfer_api.h|1587407673,ra/fsp/inc/api/r_i2c_master_api.h|684803572,ra/fsp/inc/instances/r_sci_i2c.h
+Renesas\#\#HAL\ Drivers\#\#all\#\#r_sci_i2c\#\#\#\#3.7.0/libraries=
 Renesas\#\#HAL\ Drivers\#\#all\#\#r_sci_spi\#\#\#\#3.7.0/all=2999473418,ra/fsp/src/r_sci_spi/r_sci_spi.c|57267461,ra/fsp/inc/instances/r_sci_spi.h|2516469150,ra/fsp/inc/api/r_spi_api.h|2170971077,ra/fsp/inc/api/r_transfer_api.h
 Renesas\#\#HAL\ Drivers\#\#all\#\#r_sci_spi\#\#\#\#3.7.0/libraries=
 Renesas\#\#HAL\ Drivers\#\#all\#\#r_sci_uart\#\#\#\#3.7.0/all=2901285304,ra/fsp/inc/instances/r_sci_uart.h|2170971077,ra/fsp/inc/api/r_transfer_api.h|134969800,ra/fsp/inc/api/r_uart_api.h|1053173491,ra/fsp/src/r_sci_uart/r_sci_uart.c
