PORTENTA_H33 prj: add missing sci i2c and uart interfaces
Former-commit-id: 232847a49538acf4e1353ec5d4c16282446a90fb

--- a/variants/PORTENTA_H33/e2studio_project/.settings/com.renesas.cdt.ddsc.threads.configurator.prefs
+++ b/variants/PORTENTA_H33/e2studio_project/.settings/com.renesas.cdt.ddsc.threads.configurator.prefs
@@ -7,7 +7,14 @@ collapse/module.driver.ether_on_ether.509222656=false
 collapse/module.driver.i2c_on_iic_master.1333952917=false
 collapse/module.driver.i2c_on_iic_master.176947243=false
 collapse/module.driver.i2c_on_iic_master.373454883=false
+collapse/module.driver.i2c_on_sci_i2c.1077560582=false
+collapse/module.driver.i2c_on_sci_i2c.114930504=false
+collapse/module.driver.i2c_on_sci_i2c.1296399307=false
+collapse/module.driver.i2c_on_sci_i2c.1584317036=false
+collapse/module.driver.i2c_on_sci_i2c.181282643=false
+collapse/module.driver.i2c_on_sci_i2c.1822756621=false
 collapse/module.driver.i2c_on_sci_i2c.1999145326=false
+collapse/module.driver.i2c_on_sci_i2c.293258996=false
 collapse/module.driver.i2c_on_sci_i2c.344101888=false
 collapse/module.driver.i2c_on_sci_i2c.757277155=false
 collapse/module.driver.i2s_on_ssi.1763083514=false
@@ -17,11 +24,16 @@ collapse/module.driver.spi_on_sci_spi.16499920=false
 collapse/module.driver.spi_on_sci_spi.1779778885=false
 collapse/module.driver.spi_on_spi.70474099=false
 collapse/module.driver.spi_on_spi.894590866=false
+collapse/module.driver.uart_on_sci_uart.1058451605=false
 collapse/module.driver.uart_on_sci_uart.1340099104=false
 collapse/module.driver.uart_on_sci_uart.1511980899=false
+collapse/module.driver.uart_on_sci_uart.2041578641=false
 collapse/module.driver.uart_on_sci_uart.246478418=false
+collapse/module.driver.uart_on_sci_uart.455377103=false
 collapse/module.driver.uart_on_sci_uart.547624343=false
 collapse/module.driver.uart_on_sci_uart.597926940=false
+collapse/module.driver.uart_on_sci_uart.635657325=false
+collapse/module.driver.uart_on_sci_uart.901804558=false
 collapse/module.driver.usbx_pcdc.192829614=false
 collapse/module.middleware.rm_filex_block_media.1679350335=false
 collapse/module.middleware.rm_netxduo_ether.1527872531=false
