--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "extras/tinyusb"]
 	path = extras/tinyusb
-	url = git@github.com:bcmi-labs/tinyusb.git
+	url = https://github.com/bcmi-labs/tinyusb.git
