changed e2studio project to include elc file in the building
Former-commit-id: fd85239e3e655736226fcee624ab6799e08c6519

--- a/extras/e2studioProjects/Santiago/.settings/com.renesas.cdt.ddsc.packs.componentfiles.prefs
+++ b/extras/e2studioProjects/Santiago/.settings/com.renesas.cdt.ddsc.packs.componentfiles.prefs
@@ -18,6 +18,8 @@ Renesas\#\#HAL\ Drivers\#\#all\#\#r_dac\#\#\#\#3.7.0/all=4193050144,ra/fsp/inc/a
 Renesas\#\#HAL\ Drivers\#\#all\#\#r_dac\#\#\#\#3.7.0/libraries=
 Renesas\#\#HAL\ Drivers\#\#all\#\#r_dtc\#\#\#\#3.7.0/all=1261122503,ra/fsp/src/r_dtc/r_dtc.c|428353588,ra/fsp/inc/instances/r_dtc.h|2170971077,ra/fsp/inc/api/r_transfer_api.h
 Renesas\#\#HAL\ Drivers\#\#all\#\#r_dtc\#\#\#\#3.7.0/libraries=
+Renesas\#\#HAL\ Drivers\#\#all\#\#r_elc\#\#\#\#3.7.0/all=2112694741,ra/fsp/src/r_elc/r_elc.c|3723981064,ra/fsp/inc/instances/r_elc.h|2978087792,ra/fsp/inc/api/r_elc_api.h
+Renesas\#\#HAL\ Drivers\#\#all\#\#r_elc\#\#\#\#3.7.0/libraries=
 Renesas\#\#HAL\ Drivers\#\#all\#\#r_gpt\#\#\#\#3.7.0/all=1385984689,ra/fsp/inc/api/r_timer_api.h|1101069320,ra/fsp/inc/instances/r_gpt.h|3073491683,ra/fsp/src/r_gpt/r_gpt.c
 Renesas\#\#HAL\ Drivers\#\#all\#\#r_gpt\#\#\#\#3.7.0/libraries=
 Renesas\#\#HAL\ Drivers\#\#all\#\#r_icu\#\#\#\#3.7.0/all=1175293790,ra/fsp/inc/instances/r_icu.h|1002305543,ra/fsp/inc/api/r_external_irq_api.h|1806776990,ra/fsp/src/r_icu/r_icu.c
