Added ethernet and ethernet PHY module to e2studio project for Portenta h33 lib
Former-commit-id: 7b3917e8827f29f766b2e95185c8a84b729a54a2

--- a/extras/e2studioProjects/portenta_h33_lib/.settings/com.renesas.cdt.ddsc.threads.configurator.prefs
+++ b/extras/e2studioProjects/portenta_h33_lib/.settings/com.renesas.cdt.ddsc.threads.configurator.prefs
@@ -1,4 +1,5 @@
 collapse/module.driver.basic_on_usb.21265202=false
+collapse/module.driver.ether_on_ether.855446690=false
 collapse/module.driver.i2c_on_iic_master.1685905786=false
 collapse/module.driver.i2c_on_sci_i2c.563178273=false
 collapse/module.driver.i2s_on_ssi.1413043541=false
