--- a/libraries/CAN/library.properties
+++ b/libraries/CAN/library.properties
@@ -7,4 +7,4 @@ paragraph=This library provides CAN/CANFD access for Uno R4 and Portenta H33.
 category=Other
 url=
 architectures=renesas
-include=ArduinoCAN.h
+include=CAN.h
