Writing test code for util::calc_can_bit_timing.
Former-commit-id: bd45c29428a034af9d69abcd7642c1ee49775545

--- a/libraries/CAN/extras/test/CMakeLists.txt
+++ b/libraries/CAN/extras/test/CMakeLists.txt
@@ -12,10 +12,12 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(TEST_TARGET ${CMAKE_PROJECT_NAME})
 ##########################################################################
 set(TEST_TARGET_SRCS
+  src/test_calc_can_bit_timinig.cpp
   src/test_main.cpp
+  ../../src/CanUtil.cpp
 )
 ##########################################################################
-add_compile_options(-Wall -Wextra -Wpedantic -Werror)
+add_compile_options(-Wall -Wextra -Wpedantic)
 ##########################################################################
 set(CMAKE_C_FLAGS   ${CMAKE_C_FLAGS}   "--coverage")
 set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "--coverage -Wno-deprecated-copy")
