Rename library to Arduino_CAN. This allows consistency with the related ArduinoCore-mbed PR:
https://github.com/arduino/ArduinoCore-mbed/pull/633.

Former-commit-id: fe982e925fdff454c764c5b6e9f4c95807602f5e

--- a/libraries/Arduino_CAN/library.properties
+++ b/libraries/Arduino_CAN/library.properties
@@ -1,4 +1,4 @@
-name=CAN
+name=Arduino_CAN
 version=1.0
 author=Arduino
 maintainer=Arduino <info@arduino.cc>
@@ -7,4 +7,4 @@ paragraph=This library provides CAN/CANFD access for Uno R4 and Portenta H33.
 category=Other
 url=
 architectures=renesas
-include=CAN.h
+include=Arduino_CAN.h
