add bossac dependency
Former-commit-id: 49d165eaee16074278503fdbf766c3b443dd336c

--- a/extras/package_index.json.template
+++ b/extras/package_index.json.template
@@ -44,6 +44,11 @@
               "packager": "arduino",
               "version": "0.11.0-arduino5",
               "name": "dfu-util"
+            },
+            {
+              "packager": "arduino",
+              "version": "1.9.1-arduino5",
+              "name": "bossac"
             }
           ],
           "discoveryDependencies": [
