--- a/libraries/SSLClient/library.properties
+++ b/libraries/SSLClient/library.properties
@@ -1,9 +1,11 @@
 name=SSLClient
 version=1.1
 author=V Govorovski
-maintainer=Github Community
+maintainer=Arduino <info@arduino.cc>
 sentence=Provides secure network connection over a generic Client trasport object.
 paragraph=With this library you can make a TLS or SSL connection to a remote server.
 category=Communication
 url=
-architectures=esp32 
+architectures=
+precompiled=true
+ldflags=-lmbedtls
