lwip: add submodule
Former-commit-id: ea2cbfd62da4fec708e52baf523ab400c97b2856

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "extras/tls/mbedtls"]
 	path = extras/tls/mbedtls
 	url = git@github.com:bcmi-labs/mbedtls.git
+[submodule "extras/net/lwip"]
+	path = extras/net/lwip
+	url = https://git.savannah.nongnu.org/git/lwip.git
