SSLClient: add libmbedse05x.a library
Former-commit-id: 0a620eab47e7fd85b058bb40d749ec3992ce0dc1

--- a/libraries/SSLClient/library.properties
+++ b/libraries/SSLClient/library.properties
@@ -8,4 +8,4 @@ category=Communication
 url=
 architectures=
 precompiled=true
-ldflags=-lmbedtls -lmbedcrypto -lmbedx509
+ldflags=-lmbedtls -lmbedcrypto -lmbedx509 -lmbedse05x
