Cleanup fqbns and user facing names
Former-commit-id: 03b2afb18c78ef5e005ed174c78c0900c613e7af

--- a/extras/package_index.json.template
+++ b/extras/package_index.json.template
@@ -23,10 +23,16 @@
           },
           "boards": [
             {
-              "name": "Arduino Santiago"
+              "name": "Arduino UNO R4 Minima"
             },
             {
-              "name": "Arduino Portenta H33"
+              "name": "Arduino UNO R4 WiFi"
+            },
+            {
+              "name": "Arduino Portenta C33"
+            },
+            {
+              "name": "Arduino Science Kit R3 Audio Module"
             }
           ],
           "toolsDependencies": [
