List support for R4 WiFi/Minima in library description.
Former-commit-id: 9e269fb16d3e19c3a5ee2ef17a5a2725cc7bee31

--- a/libraries/Arduino_FreeRTOS/library.properties
+++ b/libraries/Arduino_FreeRTOS/library.properties
@@ -2,7 +2,7 @@ name=Arduino_FreeRTOS
 version=1.0.0
 author=Arduino
 maintainer=Arduino <info@arduino.cc>
-sentence=This library provides FreeRTOS for the Portenta C33.
+sentence=This library provides FreeRTOS for the Portenta C33, Uno R4 Minima / WiFi.
 paragraph=
 category=Other
 url=
