libraries: fixup architecture field
Former-commit-id: af4123d6add3e3f9764f7d38f0bf0789592c82d7

--- a/libraries/Arduino_CAN/library.properties
+++ b/libraries/Arduino_CAN/library.properties
@@ -6,5 +6,5 @@ sentence=CAN/CANFD communication library for UNO R4 and Portenta H33.
 paragraph=This library provides CAN/CANFD access for Uno R4 and Portenta H33.
 category=Other
 url=
-architectures=renesas
+architectures=renesas,renesas_portenta,renesas_uno
 include=Arduino_CAN.h
