--- a/libraries/Arduino_FreeRTOS/library.properties
+++ b/libraries/Arduino_FreeRTOS/library.properties
@@ -6,5 +6,5 @@ sentence=This library provides FreeRTOS for the Portenta C33, Uno R4 Minima / Wi
 paragraph=
 category=Other
 url=
-architectures=renesas
+architectures=renesas,renesas_portenta,renesas_uno
 include=Arduino_FreeRTOS.h
