--- a/libraries/RTC/library.properties
+++ b/libraries/RTC/library.properties
@@ -6,4 +6,4 @@ sentence=RTC library for Renesas RA boards
 paragraph=provides helper to set and read RTC
 category=Timing
 url=https://github.com/arduino/ArduinoCore-renesas/tree/master/libraries/RTC
-architectures=renesas
+architectures=renesas,renesas_portenta,renesas_uno
