--- a/libraries/SE05X/library.properties
+++ b/libraries/SE05X/library.properties
@@ -6,4 +6,4 @@ sentence=Arduino Library for the NXP SE05X crypto chips
 paragraph=
 category=Communication
 url=
-architectures=
+architectures=renesas,renesas_portenta
