--- a/libraries/SSLClient/library.properties
+++ b/libraries/SSLClient/library.properties
@@ -6,6 +6,6 @@ sentence=Provides secure network connection over a generic Client trasport objec
 paragraph=With this library you can make a TLS or SSL connection to a remote server.
 category=Communication
 url=
-architectures=
+architectures=renesas,renesas_portenta
 precompiled=true
 ldflags=-lmbedtls -lmbedcrypto -lmbedx509 -lmbedse05x
