--- a/libraries/lwIpWrapper/library.properties
+++ b/libraries/lwIpWrapper/library.properties
@@ -6,6 +6,6 @@ sentence=Interface network interfaces with lwIP
 paragraph=This library is the basic layer to interface network interfaces (Ethernet, WiFi) with lwIP library
 category=Communication
 url=https://github.com/arduino/ArduinoCore-renesas/tree/master/libraries/LwIpWrapper
-architectures=renesas
+architectures=renesas,renesas_portenta
 precompiled=true
 ldflags=-llwIP
