--- a/libraries/EEPROM/library.properties
+++ b/libraries/EEPROM/library.properties
@@ -6,5 +6,5 @@ sentence=Enables reading and writing to the permanent board storage.
 paragraph=This library allows to read and write data in FLASH emulating the behaviour of an EEPROM memory, that keeps its content also when the board is powered off. The amount of EEPROM available depends on the microcontroller type.
 category=Data Storage
 url=http://www.arduino.cc/en/Reference/EEPROM
-architectures=renesas
+architectures=renesas,renesas_portenta,renesas_uno
 
