--- a/libraries/ESPhost/library.properties
+++ b/libraries/ESPhost/library.properties
@@ -6,6 +6,6 @@ sentence=Enable the use of WiFi on C33 renesas board.
 paragraph=With this library you can use the WiFi present on C33 board to connect.
 category=Communication
 url=https://github.com/arduino/ArduinoCore-renesas/tree/master/libraries/ESPhost
-architectures=renesas
+architectures=renesas,renesas_portenta
 precompiled=true
 ldflags=-lprotobufc
