--- a/libraries/Ethernet/library.properties
+++ b/libraries/Ethernet/library.properties
@@ -6,6 +6,6 @@ sentence=Enables network connection (local and Internet) on Renesas RA boards
 paragraph=With this library you can use the Arduino Ethernet (shield or board) to connect to Internet. The library provides both client and server functionalities. The library permits you to connect to a local network also with DHCP and to resolve DNS.
 category=Communication
 url=https://github.com/arduino/ArduinoCore-renesas/tree/master/libraries/Ethernet
-architectures=renesas
+architectures=renesas,renesas_portenta
 includes=EthernetC33.h
 
