--- a/libraries/SoftwareSerial/library.properties
+++ b/libraries/SoftwareSerial/library.properties
@@ -6,4 +6,4 @@ sentence=Enables serial communication on any digital pin.
 paragraph=The SoftwareSerial library has been developed to allow serial communication on any digital pin of the board, using software to replicate the functionality of the hardware UART.
 category=Communication
 url=http://www.arduino.cc/en/Reference/SoftwareSerial
-architectures=
+architectures=renesas,renesas_portenta,renesas_uno
