ci: compile both git and non git targets

--- a/.github/workflows/compile-examples.yml
+++ b/.github/workflows/compile-examples.yml
@@ -38,15 +38,18 @@ jobs:
 
       matrix:
         board: [
-          {"fqbn": "arduino-git:renesas_portenta:portenta_c33"},
-          {"fqbn": "arduino-git:renesas_uno:minima"},
-          {"fqbn": "arduino-git:renesas_uno:unor4wifi"},
+          {"fqbn": "arduino:renesas_portenta:portenta_c33"},
+          {"fqbn": "arduino:renesas_uno:minima"},
+          {"fqbn": "arduino:renesas_uno:unor4wifi"},
+          {"fqbn": "arduino-git:renesas:portenta_c33"},
+          {"fqbn": "arduino-git:renesas:minima"},
+          {"fqbn": "arduino-git:renesas:unor4wifi"},
         ]
 
         # make board type-specific customizations to the matrix jobs
         include:
           - board:
-              fqbn: "arduino-git:renesas_portenta:portenta_c33"
+              fqbn: "arduino:renesas_portenta:portenta_c33"
             additional-sketch-paths: |
               - libraries/WiFi
               - libraries/UsbMsd
@@ -58,7 +61,24 @@ jobs:
               - libraries/Arduino_CAN/examples/CAN1Read
               - libraries/Arduino_CAN/examples/CAN1Write
           - board:
-              fqbn: "arduino-git:renesas_uno:unor4wifi"
+              fqbn: "arduino-git:renesas:portenta_c33"
+            additional-sketch-paths: |
+              - libraries/WiFi
+              - libraries/UsbMsd
+              - libraries/UsbHostMsd
+              - libraries/Storage
+              - libraries/SSLClient
+              - libraries/SE05X
+              - libraries/Ethernet
+              - libraries/Arduino_CAN/examples/CAN1Read
+              - libraries/Arduino_CAN/examples/CAN1Write
+          - board:
+              fqbn: "arduino:renesas_uno:unor4wifi"
+            additional-sketch-paths: |
+              - libraries/WiFiS3
+              - libraries/Arduino_LED_Matrix
+          - board:
+              fqbn: "arduino-git:renesas:unor4wifi"
             additional-sketch-paths: |
               - libraries/WiFiS3
               - libraries/Arduino_LED_Matrix
