--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,12 @@
 [submodule "extras/tinyusb"]
 	path = extras/tinyusb
 	url = git@github.com:arduino/tinyusb.git
-[submodule "extras/santiago-leven-usb-bridge"]
-	path = extras/santiago-leven-usb-bridge
-	url = git@github.com:bcmi-labs/santiago-leven-usb-bridge
+[submodule "extras/uno-r4-wifi-usb-bridge"]
+	path = extras/uno-r4-wifi-usb-bridge
+	url = git@github.com:bcmi-labs/uno-r4-wifi-usb-bridge
 [submodule "extras/fsp"]
 	path = extras/fsp
-	url = git@github.com:bcmi-labs/fsp.git
+	url = git@github.com:arduino/fsp.git
 [submodule "extras/protobuf-c"]
 	path = extras/protobuf-c
 	url = git@github.com:protobuf-c/protobuf-c.git
