--- a/.github/workflows/compile-examples.yml
+++ b/.github/workflows/compile-examples.yml
@@ -113,7 +113,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: arduino/arduino-examples
-          path: extras
+          path: examples
 
       - name: Submodule update
         run: git submodule init && git submodule update
