Declare architecture properly

--- a/libraries/OPAMP/library.properties
+++ b/libraries/OPAMP/library.properties
@@ -6,5 +6,5 @@ sentence=Library for using the OPAMP on Arduino Uno R4 boards.
 paragraph=Supports OPAMP on Arduino Uno R4 (Minima, WiFI).
 category=Signal Input/Output
 url=https://github.com/arduino/ArduinoCore-renesas/tree/master/libraries/OPAMP
-architectures=renesas
+architectures=renesas,renesas_uno
 includes=OPAMP.h
