Fix library.properties sentence

--- a/libraries/OTAUpdate/library.properties
+++ b/libraries/OTAUpdate/library.properties
@@ -2,7 +2,7 @@ name=OTAUpdate
 version=0.0.1
 author=Arduino
 maintainer=Arduino <info@arduino.cc>
-sentence=Arduino Library for UNO R4 OTA
+sentence=Library for Arduino UNO R4 WiFi OTA Update
 paragraph=
 category=Communication
 url=
